--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@parcel/transformer-sass": "^2.16.1",
     "parcel": "^2.16.1",
     "sass": "^1.94.2"
+  },
+  "dependencies": {
+    "core-js": "^3.47.0",
+    "regenerator-runtime": "^0.14.1"
   }
 }
